# service_ticket_dabs

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  databricks.yml  pyproject.toml
files/: config.yml  incremental.py
note/: ITSM_Incident_Data_Dictionary.md  ITSM_Problem_Data_Dictionary.md  field_mapping.md  notes_extracted.md  page1.md
note/cleanup/: config-yml-comment-trim.md  stage-00-input-sync.md  stage-01-problem-health.md  stage-01b-pii-redaction.md  stage-04-train-only-similarity-filter.md
problem_health/: README.md  cleaning_spark.py  config.yml  embeddings.py  mlflow_utils.py  pipeline.py  preprocessing.py  run.py  similarity.py
problem_health/01_problem_health/: benchmark_cleaning.py  cleaning.py  cleaning_spark.py  incremental.py  pipeline.py  preprocessing.py  run.py  similarity.py  storage.py  timing.py
problem_health/02_llm_summarization/: evaluate.py  pipeline.py  run.py  summarize.py
problem_health/03_cross_encoder_rerank/: README.md  evaluate.py  pipeline.py  rerank.py
problem_health/04_gradient_boost_inference/: README.md  evaluate.py  features.py  inference.py  linking.py  pipeline.py
problem_health/05_clustering/: README.md  clustering.py  merge.py  overlay.py  pipeline.py  visualize.py
problem_health/requirements/: requirements-dev.txt  requirements.txt
problem_health/tests/: README.md  conftest.py  test_clustering.py  test_evaluate.py  test_merge.py  test_mlflow_utils.py
src/ServiceTicket/: MLFLOW.md  Pipeline.md  README.md  config.yml  device_log.py  mlflow_utils.py  model_cache.py  run.py  stage_io.py
(+83 files in other folders)
